_sass/method.scss
.card-header {
  margin-bottom: 2.5rem;
  margin-top: 1em;
  text-align: right;

  nav {
    ol {
      align-items: stretch;
      justify-content: center;
    }

    li {
      border-radius: 3px;
    }
  }

  .footer {
    line-height: 1.33em;
    margin: 0 auto;

    h1 {
      color: $color-gray-dark;
      font-family: $font-sans;
      font-size: $h4-font-size;
      font-weight: bold;
      margin-bottom: .6em;
      margin-top: 1.2em;
    }
  }
}

.anchor {
  content: '';
  display: block;
  height: 7rem;
  margin-top: -7rem;
  visibility: hidden;
}

.method {
  background: $color-inverse;
  box-shadow: 1px 1px 0 rgba(0,0,0,0.08);
  border-radius: 6px;
  display: table;
  font-family: $font-sans;
  margin-bottom: 3rem;
  position: relative;

  &:target {
    box-shadow: 0 5px 5px -2px rgba(0, 0, 0, .25);
  }

  p,
  li {
    line-height: 1.3em;
    margin-bottom: .6em;
    margin-top: 0;
  }

  ol,
  ul {
    margin-left: 1.4em;
    padding-top: .6em;
  }

  .method--title {
    border-top: 8px solid;
    font-family: $font-sans;
    font-size: $h2-font-size;
    font-weight: bold;
    margin-bottom: .5em;
    margin-top: .5em;
    padding-top: .8em;

    a,
    a:visited {
      color: $color-gray-dark;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  h2 {
    font-family: $font-sans;
    font-size: $h4-font-size;
    font-weight: bold;
    margin-bottom: .6em;
    margin-top: 1.2em;
  }

  .method--panel {
    display: block;
    padding: 20px 40px;
    width: auto;
  }

  .method--section--what,
  .method--section--why {
    font-family: $font-sans;
    font-size: $base-font-size;
    line-height: 1.4;
  }

  .method--section--category {
    min-width: 15rem;
  }

  .method--section--time-required {
    width: 100%;
  }

  .method--section--category,
  .method--section--time-required {
    border-top: 1px solid $color-gray-light;
    display: table-cell;

    p {
      font-size: $small-font-size;
    }
  }

  // method--panel--front
  .method--panel--front {
    position: relative;

    footer {
      display: table;
      margin-top: 3rem;
      position: relative;
      width: 100%;

      h1 {
        font-size: $h6-font-size;
        text-transform: uppercase;
      }
    }

  }

  // method--panel--back
  .method--panel--back {
    background: $color-gray-lightest;
    font-size: $small-font-size;
    border-radius: 0 0 6px 6px;
    padding-top: 32px;
    :first-child {
      margin-top: 0;
    }
    h1 {
      font-size: $h4-font-size;
      margin-top: .6em;
    }

    h2 {
      font-family: $font-sans;
      font-size: $h4-font-size;
      margin-top: 1em;
    }

    a {
      text-decoration: underline;
    }

    em {
      font-family: $font-sans;
    }

    ol,
    ul {
      margin: 0 0 1rem 1.5rem;
      padding-left: 0;
      padding-top: 0;

      ol,
      ul {
        list-style: disc;
        margin-left: 1.4em;
        padding-top: .6em;
      }
    }

    p,
    li {
      line-height: 1.4em;
      margin-bottom: .6em;
    }

    .method--section--government-considerations {
      font-family: $font-sans;
      font-size: $tiny-font-size;
      line-height: 1.3em;

      h2 {
        font-size: $h5-font-size;
        margin-top: 1em;
      }

      ul {
        list-style: none;
        padding-left: 0;
      }
    }

    :last-child {
      margin-bottom: 0;
    }
  }

  &::after {
    clear: both;
    content: '';
    display: table;
  }
}

@media screen and (min-width: 800px) {

  .method .method--panel {
    display: table-cell;
    padding: 20px 40px;
    vertical-align: top;
    width: 50%;
  }

  .method .method--panel--front {
    padding-bottom: 15rem;
    position: relative;
  }

  .method .method--panel--front footer {
      bottom: 0;
      display: table;
      left: 0;
      padding: 0 40px 20px;
      position: absolute;
      width: 100%;
  }

  .method .method--panel--back {
    border-radius: 0 6px 6px 0;
    padding-top: 30px;
  }
}

.category--discover .method--title {
  border-color: $color-blue;
}
.category--decide .method--title {
  border-color: $color-green;
}
.category--make .method--title {
  border-color: $color-gold;
}
.category--validate .method--title {
  border-color: $color-red;
}
.category--fundamentals .method--title {
  border-color: $color-blue-dark;
}

.method--section--additional-resources {
  margin-bottom: 10px;
}

